Fix layout issue

--- a/app/assets/stylesheets/admin/_admin.scss
+++ b/app/assets/stylesheets/admin/_admin.scss
@@ -843,3 +843,8 @@ Sidebar
 .cd-nav-trigger {
     text-indent: -9999em !important;
 }
+
+
+.dashboards-show .charts {
+    overflow: hidden;
+}
